--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,16 @@
 {
-	"short_name": "Convocation Controller",
-	"name": "ReadySetLinq - Convocation Controller",
-	"icons": [
-		{
-			"src": "favicon.ico",
-			"sizes": "64x64 32x32 24x24 16x16",
-			"type": "image/x-icon"
-		}
-	],
-	"start_url": ".",
-	"display": "standalone",
-	"theme_color": "#e6e6e6",
-	"background_color": "#24292e"
+  "short_name": "Convocation Controller",
+  "name": "ReadySetLinq - Convocation Controller",
+  "icons": [
+    {
+      "src": "favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
+    }
+  ],
+  "start_url": ".",
+  "homepage": "./",
+  "display": "standalone",
+  "theme_color": "#e6e6e6",
+  "background_color": "#24292e"
 }
