--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,8 +8,8 @@
       "type": "image/x-icon"
     }
   ],
-  "start_url": "./",
-  "homepage": "",
+  "start_url": ".",
+  "homepage": "./",
   "display": "standalone",
   "theme_color": "#e6e6e6",
   "background_color": "#24292e"
