--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"@types/events": "^3.0.0",
 		"@types/jest": "^26.0.0",
 		"@types/lodash": "^4.14.156",
-		"@types/material-ui": "^0.21.7",
+		"@types/material-ui": "0.21.7",
 		"@types/node": "^14.0.13",
 		"@types/papaparse": "^5.0.4",
 		"@types/react": "^16.9.38",
@@ -38,9 +38,9 @@
 		"@types/yup": "^0.29.3"
 	},
 	"dependencies": {
-		"@material-ui/core": "^4.11.0",
-		"@material-ui/icons": "^4.9.1",
-		"@material-ui/lab": "^4.0.0-alpha.56",
+		"@material-ui/core": "4.11.0",
+		"@material-ui/icons": "4.9.1",
+		"@material-ui/lab": "4.0.0-alpha.56",
 		"eventemitter3": "^4.0.4",
 		"formik": "^2.1.4",
 		"jotai": "^1.8.4",
