--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@material-ui/core": "4.11.0",
 		"@material-ui/icons": "4.9.1",
 		"@material-ui/lab": "4.0.0-alpha.56",
+		"@tanstack/react-query": "^4.8.0",
 		"bcryptjs": "^2.4.3",
 		"eventemitter3": "^4.0.4",
 		"formik": "^2.1.4",
