--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
 		"@types/yup": "^0.29.3"
 	},
 	"dependencies": {
-		"@material-ui/core": "4.11.0",
-		"@material-ui/icons": "4.9.1",
-		"@material-ui/lab": "4.0.0-alpha.56",
+		"@emotion/react": "^11.10.4",
+		"@emotion/styled": "^11.10.4",
+		"@mui/icons-material": "^5.10.6",
+		"@mui/lab": "^5.0.0-alpha.101",
+		"@mui/material": "^5.10.7",
 		"@tanstack/react-query": "^4.8.0",
 		"bcryptjs": "^2.4.3",
 		"eventemitter3": "^4.0.4",
@@ -52,6 +54,7 @@
 		"react-dom": "^16.13.1",
 		"react-scripts": "^3.4.1",
 		"shortid": "^2.2.15",
+		"tss-react": "^4.2.0",
 		"typescript": "^3.9.5",
 		"yup": "^0.29.1"
 	},
