Upgrade to React 18.0.0 and @mui

--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
 		"@types/material-ui": "0.21.7",
 		"@types/node": "^14.0.13",
 		"@types/papaparse": "^5.0.4",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
+		"@types/react": "^18.0.0",
+		"@types/react-dom": "^18.0.0",
 		"@types/shortid": "0.0.29",
 		"@types/ws": "^7.2.6",
 		"@types/yup": "^0.29.3"
@@ -42,7 +42,7 @@
 		"@emotion/styled": "^11.10.4",
 		"@mui/icons-material": "^5.10.6",
 		"@mui/lab": "^5.0.0-alpha.101",
-		"@mui/material": "^5.10.7",
+		"@mui/material": "5.10.7",
 		"@tanstack/react-query": "^4.8.0",
 		"axios": "^0.27.2",
 		"bcryptjs": "^2.4.3",
@@ -51,12 +51,12 @@
 		"jotai": "^1.8.4",
 		"lodash": "^4.17.15",
 		"papaparse": "^5.2.0",
-		"react": "^18",
-		"react-dom": "^18",
+		"react": "^18.0.0",
+		"react-dom": "^18.0.0",
 		"react-scripts": "^3.4.1",
 		"shortid": "^2.2.15",
 		"tss-react": "^4.2.0",
-		"typescript": "^3.9.5",
+		"typescript": "^4.0.0",
 		"yup": "^0.29.1"
 	},
 	"eslintConfig": {
