--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
 	"scripts": {
 		"serve": "serve -s build",
 		"start": "react-scripts start",
-		"build": "yarn install && react-scripts build",
+		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"rail-build": "npm i && react-scripts build",
-		"rail-start": "npm i && sh-build && react-scripts start",
-		"prebuild": "yarn add rimraf@3.0.2 --dev && yarn rimraf node_modules && yarn install"
+		"rail-start": "npm i && sh-build && react-scripts start"
 	},
 	"repository": {
 		"type": "git",
@@ -36,8 +35,7 @@
 		"@types/react-dom": "^18.0.0",
 		"@types/shortid": "^0.0.29",
 		"@types/ws": "^8.5.3",
-		"@types/yup": "^0.32.0",
-		"rimraf": "3.0.2"
+		"@types/yup": "^0.32.0"
 	},
 	"dependencies": {
 		"@emotion/react": "^11.10.4",
