--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"rail-build": "npm i && react-scripts build",
-		"rail-start": "npm i && sh-build && react-scripts start"
+		"eject": "react-scripts eject"
 	},
 	"repository": {
 		"type": "git",
